--- a/live.html
+++ b/live.html
@@ -70,13 +70,13 @@
 
     <script>
         var player = new Clappr.Player({
-            source: "https://your-stream-url/stream.m3u8",
+            source: "https://pull.niur.live/live/stream-256080_lhd.m3u8?txSecret=f0c07a9b96213512f080a9b4ca1401c1&txTime=66bff535",
             parentId: "#player",
             width: "100%",
             height: "100%",
             autoPlay: true,
             mute: false,
-            poster: "https://your-poster-image-url.jpg",
+            poster: "https://static.standard.co.uk/2023/08/10/14/PLManUtdFulham23v1.jpg?width=1200",
         });
     </script>
 </body>
