--- a/live.html
+++ b/live.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Streaming Event - Your Event Nam</title>
+    <title>Live Streaming Event</title>
     <style>
         body {
             font-family: Arial, sans-serif;
